cluster/deployments/mario-app/mario-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mario-deployment
  labels:
    app: mario
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mario
  template:
    metadata:
      labels:
        app: mario
    spec:
      containers:
      - name: mario
        image: kaminskpavel/mario
        ports:
        - containerPort: 8080
