cluster/deployments/mario-app/mario-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mario
    argocd.argoproj.io/instance: root
  name: mario-deployment
  namespace: default
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mario
  sessionAffinity: None
  type: ClusterIP
