cluster/deployments/mario-app/mario-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /mario
        pathType: Prefix
        backend:
          service:
            name: mario-service
            port:
              number: 8080
    host: myk8s.net
